Fri, 04 Jul 2008 18:47:19 +0200 <thp@perli.net>
New look for the "pill" pixbuf

	* src/gpodder/draw.py: Refresh the look of the "pill" pixbuf code, so
	we have a more visually pleasing status display in the podcast list

Thu, 03 Jul 2008 20:09:18 -0400 <me@nikosapi.org>
Display message if user tries to sync to iPod without gpod installed

	* src/gpodder/gui.py: Add an informative self.notification() if the user
	attempts to sync an iPod without the libgpod python bindings installed
	* src/gpodder/sync.py: Add sync.gpod_available, Add Device.errors to
	prevent a crash in the event of an error

Thu, 03 Jul 2008 20:26:50 +0200 <thp@perli.net>
Update list of book donators

	* src/gpodder/gui.py: Add Franz Seidl to list of book donators

Tue, 01 Jul 2008 22:46:52 -0400 <me@nikosapi.org>
Better file extension detection using feed items' mimetypes

	* src/gpodder/gui.py: Use episode.file_type() instead of 
	util.file_type_by_extension(util.file_extension_from_url(url))
	* src/gpodder/libgpodder.py: Use episode.file_type() instead of          
	util.file_type_by_extension(util.file_extension_from_url(url))
	* src/gpodder/libpodcasts.py: Add new column to the channel list
	gtk.ListStore for holding the file extension. Add extension()
	function to podcastItem which makes use mimetype in the event that
	filename_from_url()[1] returns None
	* src/gpodder/util.py: file_extension_from_url is renamed to 
	filename_from_url and returns (filename, extension)
	Added extension_from_mimetype(mimetype)

Mon, 30 Jun 2008 17:39:36 +0200 <thp@perli.net>
Do not update podcast list when closing channel window (patch by Justin Forest)

	* src/gpodder/gui.py: Do not update podcast list when closing the
	channel window, saves some CPU cycles. Patch by Justin Forest
	(Closes: http://bugs.gpodder.org/show_bug.cgi?id=135)

Sun, 29 Jun 2008 16:59:30 -0400 <me@nikosapi.org>
Merge patch from Justin Forest and Thomas Perl:
- Use SQLite instead of cPickle to store all data, including feed summary